--- a/components/project-list.html
+++ b/components/project-list.html
@@ -1,17 +1,17 @@
-<link rel="import" 
-  href="../bower_components/core-menu/core-menu.html">
-<link rel="import" 
-  href="../bower_components/core-item/core-item.html">
+<link rel="import" href="../bower_components/core-menu/core-menu.html">
+<link rel="import" href="../bower_components/core-item/core-item.html">
 
 <polymer-element name="project-list">
   <template>
     <style>
     </style>
-    <core-menu theme="core-light-theme">
-      <template repeat="{{project in projects}}">
-        <core-item icon="work" label="{{ project.name }}"></core-item>
-      </template>
-    </core-menu>  
+    <core-header-panel style="height:100%; background:#f2f2f2">
+      <core-menu theme="core-light-theme">
+        <template repeat="{{project in projects}}">
+          <core-item icon="work" label="{{ project.name }}"></core-item>
+        </template>
+      </core-menu>
+    </core-header-panel>
   </template>
   <script>
     Polymer({
@@ -21,6 +21,6 @@
           {name: 'Lie-Nielsen', fields: [7, 0, 10]}
         ];
       }
-    });    
+    });
   </script>
 </polymer-element>
